modules/load_balancer/waf.tf

# AWS WAF Managed Rule Groups
# https://docs.aws.amazon.com/waf/latest/developerguide/aws-managed-rule-groups-list.html
# https://docs.aws.amazon.com/waf/latest/developerguide/aws-managed-rule-groups-baseline.html

# Pricing
# https://aws.amazon.com/waf/pricing/
# Web ACL: $5/mo
# Rule: $1/mo
# Default Body: 8kb
# Included WCU: 1500
# Max WCU: 5000

# https://registry.terraform.io/providers/hashicorp/aws/latest/docs/resources/wafv2_web_acl
resource "aws_wafv2_web_acl" "main" {
  count       = var.public && var.waf_enabled ? 1 : 0
  name        = "${var.name}-waf"
  description = "Basic WAF"
  scope       = "REGIONAL"
  tags        = var.tags

  default_action {
    allow {}
  }

  visibility_config {
    cloudwatch_metrics_enabled = true
    metric_name                = "${var.name}-waf-default"
    sampled_requests_enabled   = true
  }

  rule {
    name     = "AWS-AWSManagedRulesAmazonIpReputationList"
    priority = 1
    override_action {
      none {}
    }
    statement {
      managed_rule_group_statement {
        vendor_name = "AWS"
        name        = "AWSManagedRulesAmazonIpReputationList"
      }
    }
    visibility_config {
      cloudwatch_metrics_enabled = true
      metric_name                = "${var.name}-waf-aws-ip-reputation"
      sampled_requests_enabled   = true
    }
  }

  rule {
    name     = "AWS-AWSManagedRulesAnonymousIpList"
    priority = 2
    override_action {
      none {}
    }
    statement {
      managed_rule_group_statement {
        vendor_name = "AWS"
        name        = "AWSManagedRulesAnonymousIpList"
      }
    }
    visibility_config {
      cloudwatch_metrics_enabled = true
      metric_name                = "${var.name}-waf-aws-anonymous-ip"
      sampled_requests_enabled   = true
    }
  }

  rule {
    name     = "AWS-AWSManagedRulesCommonRuleSet"
    priority = 3
    override_action {
      none {}
    }
    statement {
      managed_rule_group_statement {
        vendor_name = "AWS"
        name        = "AWSManagedRulesCommonRuleSet"
        # You probably should not disable these common rules
        # but if you must, you can disable them with the below config
        # BE CAREFUL!!!
        # rule_action_override {
        #   name = "SizeRestrictions_BODY"
        #   action_to_use {
        #     allow {}
        #   }
        # }
      }
    }
    visibility_config {
      cloudwatch_metrics_enabled = true
      metric_name                = "${var.name}-waf-aws-common"
      sampled_requests_enabled   = true
    }
  }

  rule {
    name     = "AWS-AWSManagedRulesKnownBadInputsRuleSet"
    priority = 4
    override_action {
      none {}
    }
    statement {
      managed_rule_group_statement {
        vendor_name = "AWS"
        name        = "AWSManagedRulesKnownBadInputsRuleSet"
      }
    }
    visibility_config {
      cloudwatch_metrics_enabled = true
      metric_name                = "${var.name}-waf-aws-known-bad-inputs"
      sampled_requests_enabled   = true
    }
  }

  rule {
    name     = "RateLimitRule"
    priority = 5
    action {
      dynamic "block" {
        for_each = var.waf_rate_limit_action == "block" ? [1] : []
        content {}
      }
      dynamic "count" {
        for_each = var.waf_rate_limit_action == "count" ? [1] : []
        content {}
      }
    }
    statement {
      rate_based_statement {
        limit              = var.waf_rate_limit
        aggregate_key_type = "IP"
      }
    }
    visibility_config {
      cloudwatch_metrics_enabled = true
      metric_name                = "${var.name}-waf-rate-limit"
      sampled_requests_enabled   = true
    }
  }

  rule {
    name     = "AWS-AWSManagedRulesSQLiRuleSet"
    priority = 6
    override_action {
      none {}
    }
    statement {
      managed_rule_group_statement {
        vendor_name = "AWS"
        name        = "AWSManagedRulesSQLiRuleSet"
      }
    }
    visibility_config {
      cloudwatch_metrics_enabled = true
      metric_name                = "${var.name}-waf-sql-injection"
      sampled_requests_enabled   = true
    }
  }

  rule {
    name     = "AWS-AWSManagedRulesLinuxRuleSet"
    priority = 7
    override_action {
      none {}
    }
    statement {
      managed_rule_group_statement {
        vendor_name = "AWS"
        name        = "AWSManagedRulesLinuxRuleSet"
      }
    }
    visibility_config {
      cloudwatch_metrics_enabled = true
      metric_name                = "${var.name}-waf-linux-protection"
      sampled_requests_enabled   = true
    }
  }

  rule {
    name     = "AWS-AWSManagedRulesUnixRuleSet"
    priority = 8
    override_action {
      none {}
    }
    statement {
      managed_rule_group_statement {
        vendor_name = "AWS"
        name        = "AWSManagedRulesUnixRuleSet"
      }
    }
    visibility_config {
      cloudwatch_metrics_enabled = true
      metric_name                = "${var.name}-waf-unix-protection"
      sampled_requests_enabled   = true
    }
  }

  dynamic "rule" {
    for_each = var.waf_geo_blocking_enabled ? [1] : []
    content {
      name     = "GeoBlockingRule"
      priority = 9
      action {
        dynamic "block" {
          for_each = var.waf_geo_blocking_action == "block" ? [1] : []
          content {}
        }
        dynamic "count" {
          for_each = var.waf_geo_blocking_action == "count" ? [1] : []
          content {}
        }
      }
      statement {
        geo_match_statement {
          country_codes = var.waf_blocked_countries
        }
      }
      visibility_config {
        cloudwatch_metrics_enabled = true
        metric_name                = "${var.name}-waf-geo-blocking"
        sampled_requests_enabled   = true
      }
    }
  }
}

# Link to Load Balancer
# https://registry.terraform.io/providers/hashicorp/aws/latest/docs/resources/wafv2_web_acl_association
resource "aws_wafv2_web_acl_association" "main" {
  count        = var.public && var.waf_enabled ? 1 : 0
  resource_arn = aws_lb.main.arn
  web_acl_arn  = aws_wafv2_web_acl.main[0].arn
}

# Logging
# https://registry.terraform.io/providers/hashicorp/aws/latest/docs/resources/cloudwatch_log_group
resource "aws_cloudwatch_log_group" "main" {
  count             = var.public && var.waf_enabled ? 1 : 0
  name              = "aws-waf-logs-${var.name}" # Must begin with "aws-waf-logs"
  kms_key_id        = var.kms_key.arn
  retention_in_days = var.log_retention_days
  skip_destroy      = !var.dev_mode
  tags              = var.tags
}

# Logging
# https://registry.terraform.io/providers/hashicorp/aws/latest/docs/resources/wafv2_web_acl_logging_configuration
resource "aws_wafv2_web_acl_logging_configuration" "main" {
  count                   = var.public && var.waf_enabled ? 1 : 0
  log_destination_configs = [aws_cloudwatch_log_group.main[0].arn]
  resource_arn            = aws_wafv2_web_acl.main[0].arn
}
